--- a/rebar.config
+++ b/rebar.config
@@ -8,7 +8,7 @@
               "CFLAGS", "$CFLAGS -DNDEBUG"}
             ]}.
 
-{deps, [{edown, ".*", {git, "https://github.com/uwiger/edown.git", "HEAD"}}]}.
+{deps, [{edown, ".*", {git, "https://github.com/uwiger/edown.git", "master"}}]}.
 
 {edoc_opts, [{doclet, edown_doclet},
              {source_path, ["src", "test"]},
